--- a/src/package.json
+++ b/src/package.json
@@ -17,12 +17,14 @@
     "start": "../start-api.sh"
   },
   "dependencies": {
-    "esbuild": "^0.14.14"
+    "esbuild": "^0.14.14",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@jest/globals": "^29.2.0",
     "@types/aws-lambda": "^8.10.92",
     "@types/jest": "^29.2.0",
-    "@jest/globals": "^29.2.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.5.7",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
