--- a/function/tsconfig.json
+++ b/function/tsconfig.json
@@ -3,10 +3,10 @@
     "target": "es2020",
     "strict": true,
     "preserveConstEnums": true,
-    "noEmit": true,
     "sourceMap": false,
-    "module": "es2015",
+    "module": "CommonJS",
     "moduleResolution": "node",
+    "outDir": "./dist",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -15,6 +15,9 @@
       "./node_modules/@types"
     ]
   },
+  "include": [
+    "./src/**/*.ts"
+  ],
   "exclude": [
     "node_modules",
     "**/*.test.ts"
