ci: Remove referencia de outras branches.

--- a/.github/workflows/terrform.yaml
+++ b/.github/workflows/terrform.yaml
@@ -3,8 +3,7 @@ name: Apply terraform resources
 on:
   push:
     branches:
-      - main
-      - master
+      - 'master'
     paths:
       - 'terrraform/**'
 
