--- a/.github/workflows/terrform.yaml
+++ b/.github/workflows/terrform.yaml
@@ -1,11 +1,11 @@
-name: Apply terraform resources 
+name: Terraform AWS
 
 on:
-  push:
-    branches:
-      - 'master'
-    paths:
-      - 'terrraform/**'
+  workflow_run:
+    workflows: ["Running lambda tests"]
+    types:
+      - completed
+
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
