ci: Ajusta usa da variavel de ambiente.

--- a/.github/workflows/terrform.yaml
+++ b/.github/workflows/terrform.yaml
@@ -22,7 +22,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ${{ env.terraform }}
+        working-directory: ${{ env.TF_WORKING_DIR }}
 
     steps:
       - name: Checkout
