--- a/.github/workflows/terrform.yaml
+++ b/.github/workflows/terrform.yaml
@@ -33,9 +33,13 @@ jobs:
         with:
           terraform_version: 0.15.5
 
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt -check
+
       - name: Terraform Init
         id: init
-        run: terraform init"
+        run: terraform init
 
       - name: Terraform Validate
         id: validate
