chore: Adiciona configuracao para o backend no s3.

--- a/.github/workflows/terraform-destroy.yaml
+++ b/.github/workflows/terraform-destroy.yaml
@@ -1,11 +1,12 @@
-name: Terraform AWS
+name: Destroy terraform resources on the given folder
 
 on:
-  workflow_run:
-    workflows: ["Running lambda tests"]
-    types:
-      - completed
-
+  workflow_dispatch:
+    inputs:
+      dir:
+        description: "Directory with resources to be destroyed"
+        required: true
+        default: "terraform"
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -13,11 +14,11 @@ env:
   AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
 
 jobs:
-  apply-dev:
-    name: 'terraform apply dev'
+  destroy-dev:
+    name: "terraform destroy dev"
     runs-on: ubuntu-latest
     env:
-      TF_WORKING_DIR: 'terraform'
+      TF_WORKING_DIR: ${{ github.event.inputs.dir }}
 
     defaults:
       run:
@@ -33,13 +34,17 @@ jobs:
         with:
           terraform_version: 0.15.5
 
+      - name: Terraform Location
+        id: location
+        run: pwd && ls -la
+
       - name: Terraform Init
         id: init
         run: terraform init -backend=true -backend-config="config/backend.hcl"
 
       - name: Terraform Validate
         id: validate
-        run: terraform validate
+        run: terraform validate -no-color
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve
