--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -5,8 +5,8 @@ on:
 
 jobs:
   build:
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - name: Configurando NodeJs
